fixed overlap because of grid-gap

--- a/style.scss
+++ b/style.scss
@@ -506,7 +506,6 @@ div#tline_text {
   grid-auto-rows: auto;
   box-sizing: border-box;
   padding: 2em 10% 2em 10%;
-  gap: 5%;
   font-family: "Ubuntu", SansSerif;
   color: lighten($fontcol, 20%);
   box-shadow: 0 0 1em 0.5em darken($bgcol, 3%);
@@ -517,6 +516,7 @@ div#tline_text {
     grid-column: 1 / -1;
     display: block;
     padding: 0;
+    margin: 0 2em 2em 2em;
     background-image: none;
     background-color: darken($bgcol, 3%);
 
@@ -524,12 +524,13 @@ div#tline_text {
     p {
       font-size: 1em;
       border: none;
+      margin: 0;
     }
   }
 
   p {
     border-top: solid $fontcol 1px;
-    margin: 0;
+    margin: 2em;
 
     .howto_emph {
       font-size: 1.25em;
